# rimerge

./: .gitignore  CMakeLists.txt  README.md  bwtmerge.cpp  internal.cpp  rimerge.py  rimerge_pfp.py  rindex.cpp  rle_string.cpp  support.cpp  utils.cpp
experiments/: CMakeLists.txt  merge_tests.sh  run_tests.py
experiments/Big-Bwt/: bigbwt  bwtparse.c  makefile  pfbwt.cpp  pfbwt_sa_only.cpp  pscan.cpp  pscan.hpp  utils.h
experiments/OnlineRlbwt/: CMakeLists.txt  OnlineRindex.cpp  OnlineRlbwt.hpp
experiments/hipergator/: create_dataset_chr19.py  create_salmonella.sh  filter_chrs.sh  filter_file.py  merge_test_chr19.sh  merge_test_salmonella.sh  update_test.sh
include/rimerge/: alphabet.hpp  bitvector.hpp  bwtmerge.hpp  inherit.hpp  internal.hpp  r-index-rle.hpp  r-index.hpp  rindex.hpp  rle_string.hpp  sa-samples.hpp  support.hpp  utils.hpp  version.hpp.in
src/: alphabet.cpp  bitvector.cpp  bwtmerge.cpp  internal.cpp  malloc_count.c  r-index-rle.cpp  rle_string.cpp  sa-samples.cpp  support.cpp  utils.cpp
tests/: benchmarks.cpp  test_bwtmerge.cpp  unit_tests.cpp
tests/files/: long.bwt  long.esa  long.ssa  long_bwt.txt  out.bwt  out.esa  out.ssa  rle_string_plain.txt  rnd_cnct.seq  rnd_seq.seq  test.bwt  test.esa  test.rle  test.ssa  test_cnct.seq
tools/: CMakeLists.txt  check_sa_values.cpp  check_structure.cpp  concat_fa.cpp  estw.cpp  main.cpp  rle.cpp  stats.cpp
